--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "not ie <= 8"
   ],
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.16.2",
-    "vue": "^2.5.5",
-    "vue-resource": "^1.3.4"
+    "vue": "^2.5.5"
   },
   "devDependencies": {
     "cross-env": "^5.1.1",
