--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "es6",
     "target": "es5",
     "experimentalDecorators": true,
-	"moduleResolution": "node"
+	"moduleResolution": "node",
+	"lib": ["es2015"]
   }
 }
