--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "pg": "^7.4.0",
     "vue": "^2.5.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.8",
     "@types/express": "^4.0.39",
+    "@types/pg": "^7.4.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
