--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "pg": "^7.4.0",
+    "validator": "^9.2.0",
     "vue": "^2.5.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.8",
     "@types/express": "^4.0.39",
     "@types/pg": "^7.4.1",
+    "@types/validator": "^6.3.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
