--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.16.2",
     "pg": "^7.4.0",
     "validator": "^9.2.0",
-    "vue": "^2.5.5"
+    "vue": "^2.5.5",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.8",
